# KO

KO_Artemis_1/: CMakeLists.txt  EnumerationSolver.cpp  EnumerationSolver.hpp  Reader.hpp  main.cpp  parameter_reader.hpp
KO_Artemis_2/: CMakeLists.txt  DynamicProgramSolver.cpp  DynamicProgramSolver.hpp  Instance.hpp  Reader.cpp  Solution.cpp  Solution.hpp  main.cpp
KO_Artemis_2/Testergebnisse/: TestergebnisseLaufzeiten.txt
KO_Artemis_3/: .gitignore  CMakeLists.txt  Instance.cpp  Reader.cpp  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  Solution.cpp  Solution.hpp  main.cpp
KO_Artemis_3/Testergebnisse/: Testergebnisse.txt
KO_Artemis_4/: knapsack.zpl
